force-app/main/default/objects/PatientDataShare__c/PatientDataShare__c.object-meta.xml
<CustomObject>
    <label>Patient Data Share</label>
    <nameField>
        <displayFormat>PDS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Data Share</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>