force-app/main/default/objects/PatientDataShare__c/fields/Clinic_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Grouping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the current clinic grouping within the PDS system.</description>
    <inlineHelpText>Displays the current Clinic Grouping the PDS record is associated with.</inlineHelpText>
    <label>Clinic Grouping</label>
    <referenceTo>Clinic_Grouping__c</referenceTo>
    <relationshipLabel>Patient Data Share</relationshipLabel>
    <relationshipName>Patient_Data_Share</relationshipName>
    <type>Lookup</type>
</CustomField>