force-app/main/default/objects/PatientDataShare__c/fields/Clinic_Status__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Status__c</fullName>
    <formula>&quot;None&quot; + &quot; Pending&quot; 
+ &quot; Active&quot; + &quot; Inactive&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clinic Status</label>
    <type>Text</type>
</CustomField>