force-app/main/default/objects/PatientDataShare__c/fields/ClinicGroupingStatus__c.field-meta.xml
<CustomField>
    <fullName>ClinicGroupingStatus__c</fullName>
    <description>Indicates the current sharing status of the clinic grouping within the PDS system, determining its accessibility across different practices and locations.</description>
    <inlineHelpText>Displays the appropriate sharing status for the clinic grouping within Patient Data Share(PDS).</inlineHelpText>
    <label>Clinic Grouping Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>